tests/jit/pass/return0.cpm
func main() ret int64 {
    return 0;
}
