tests/jit/fail/int24_type.cpm
func main() ret int24 {
    return 0;
}
